# galaxy_save_data

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/galaxy/: GameData.md  GameEventFlag.md  GameEventValue.md
docs/galaxy2/: GameData.md  GameEventFlag.md  GameEventValue.md
galaxy2_save_data/: CHANGELOG.md  Cargo.toml  README.md
galaxy2_save_data/resources/: SaveDataStorageEventFlag.csv  SaveDataStorageEventValue.csv  SaveDataStorageGalaxy.csv  labels.txt
galaxy2_save_data/src/: chunks.rs  lib.rs  save.rs
galaxy2_save_data/src/chunks/: config.rs  game.rs  sysconf.rs
galaxy2_save_data/src/chunks/config/: mii.rs  misc.rs
galaxy2_save_data/src/chunks/game/: event_flag.rs  event_value.rs  galaxy.rs  player_status.rs  tico_fat.rs  world_map.rs
galaxy2_save_data/src/chunks/sysconf/: sys_config.rs
galaxy2_save_data/src/save/: user_file.rs
galaxy2_save_data_json/: CHANGELOG.md  Cargo.toml  README.md
galaxy2_save_data_json/src/: cli.rs  main.rs
galaxy_save_core/: CHANGELOG.md  Cargo.toml  README.md
galaxy_save_core/src/: array.rs  bin.rs  event.rs  face.rs  hash.rs  lib.rs  mem.rs  ptr.rs  save.rs  string.rs  time.rs
galaxy_save_core/src/array/: tests.rs
galaxy_save_core/src/event/: flag.rs  value.rs
galaxy_save_core/src/hash/: map.rs  tests.rs
galaxy_save_core/src/mem/: tests.rs
galaxy_save_core/src/string/: tests.rs
galaxy_save_core_derive/: CHANGELOG.md  Cargo.toml  README.md
galaxy_save_core_derive/src/: lib.rs  receiver.rs
galaxy_save_data/: CHANGELOG.md  Cargo.toml  README.md
galaxy_save_data/resources/: GameDataAllGalaxyStorage.csv  GameEventFlagStorage.csv  GameEventValueStorage.csv  SpinDriverPathStorageGalaxy.csv  StoryProgressTable.csv  labels.txt
galaxy_save_data/src/: lib.rs  save.rs
galaxy_save_data/src/chunks/: config.rs  game.rs  sysconf.rs
galaxy_save_data/src/chunks/config/: create.rs  mii.rs  misc.rs
galaxy_save_data/src/chunks/game/: event_flag.rs  event_value.rs  galaxy.rs  player_status.rs  spin_driver_path.rs  star_piece_alms.rs
galaxy_save_data/src/chunks/sysconf/: sys_config.rs
galaxy_save_data/src/save/: user_file.rs
galaxy_save_data_json/: CHANGELOG.md  Cargo.toml  README.md
galaxy_save_data_json/src/: cli.rs  main.rs
