[workspace]
members = ["galaxy_save_core", "galaxy_save_core_derive", "galaxy_save_data", "galaxy_save_data_json", "galaxy2_save_data", "galaxy2_save_data_json"]
resolver = "2"

[workspace.dependencies]
bilge = "0.2.0"
binrw = "0.15.0"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
