[package]
name = "galaxy2_save_data_json"
version = "0.2.0"
authors = ["ThatNintendoNerd"]
edition = "2024"

[dependencies]
clap.workspace = true
galaxy_save_core = { path = "../galaxy_save_core", version = "^0.2.0" }
galaxy2_save_data = { path = "../galaxy2_save_data", version = "^0.2.0", features = ["serde"] }
serde_json.workspace = true
